# syscall2struct

./: .gitignore  Cargo.toml  README.md
desc/: builtin.txt  test.txt  test.txt.const
src/: main.rs  translator.rs
syscall2struct/: Cargo.toml  README.md
syscall2struct-derive/: Cargo.toml  README.md
syscall2struct-derive/src/: lib.rs
syscall2struct-helpers/: Cargo.toml  README.md
syscall2struct-helpers/src/: lib.rs
syscall2struct/src/: main.rs  translator.rs
